# Deco_with_robot

./: README.md
demo_scripts/: check_deco_diff.py  check_deco_status.py  evaluate_pos.py  hand_width_graph.py  instruct_chat.py  similarity_test.py
examples/: dialogflow.md
facial_expression/: make_face.py
facial_expression/miraikan_demo/: CMakeLists.txt  README.md  data_analysis_without_output.ipynb  mosaic_img.py  package.xml  video_to_img.py
facial_expression/miraikan_demo/euslisp/: demo.l  lecture-demo.l  robot-behavior-server.l  run_episode_test.l
facial_expression/miraikan_demo/launch/: demo.launch  lecture-demo.launch
facial_expression/miraikan_demo/scripts/: change_volume.py  demo_node.py  episode_motion.py  explanation_motion.py  eyebrows_node.py  fake_motion_talk.py  motion_talk_node.py  no_episode_motion.py  talk_motion.py
facial_expression/miraikan_demo/srv/: Mode.srv
facial_expression/text_to_expression/: Pipfile  README.md  demo_sample_publisher.py  dialogflow_run.py  dialogflow_sample.launch  emoji_sentence.json  re_classifier.ipynb  sample_publisher.py  text_classifier.py  text_to_expression.py  text_to_sound.py
facial_expression/web/: Pipfile  README.md  app_1.py  app_2.py  app_3.py  index.html  reload_web.py  web_face_node.py
facial_expression/web_nodejs/: Pipfile  README.md  chaplus_info.json  chat_node.py  docker-compose.yml  facial_exp_node.py  run.py  (+2 more)
pix2pix/: Dockerfile  Pipfile  README.md  calc_image_similarity.py  make_deco_imgs.py  make_deco_with_GA.py  make_image_from_pdf.py  pix2pix_deco.ipynb  trained_pix2pix.py
(+54 files in other folders)
