<?xml version="1.0"?>
<package format="2">
  <name>miraikan_demo</name>
  <version>0.0.0</version>
  <description>miraikan demo using Pepper</description>

  <maintainer email="tanemoto@jsk.imi.i.u-tokyo.ac.jp">Miyabi Tanemoto</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
